# LoRAStencil

./: .gitignore  CMakeLists.txt  README.md
src/1d/: 1d_utils.h  gpu_1r.cu  gpu_2r.cu  main.cu
src/2d/: 2d_utils.h  gpu.cu  main.cu
src/3d/: 3d_utils.h  gpu_box.cu  gpu_star.cu  main.cu
